<resources>
    <string name="app_name">Ideality</string>
    <string name="label_catalogue_button">Catalogue</string>
    <string name="label_preview_button">Preview</string>
    <string name="label_models_button">Models</string>
    <string name="desc_model_list">List of downloaded models</string>
    <string name="desc_models_button">View downloaded models</string>
    <string name="desc_preview_button">Preview models</string>
    <string name="desc_catalogue_button">View product catalogue</string>
    <string name="label_orders">Orders</string>
    <string name="desc_orders_button">View orders</string>
    <string name="desc_settings_button">Settings button</string>
    <string name="desc_profile_button">Profile button</string>
    <string name="username_placeholder">Customer</string>
    <string name="label_register">Register</string>
    <string name="desc_app_logo">Ideality logo</string>
    <string name="catalogue_product">Product</string>
    <string name="catalogue_description">Product description</string>
    <string name="catalogue_list_button">List</string>
    <string name="catalogue_grid_button">Grid</string>
    <string name="recaptcha_site_key">YOUR_RECAPTCHA_SITE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_phone_exists">This phone number is already linked to another account</string>
    <string name="error_invalid_phone">Please enter a valid phone number</string>
    <string name="error_phone_too_short">Phone number is too short</string>
    <string name="error_same_phone">This is already your current phone number</string>
    <string name="error_verification_failed">Verification failed. Please try again</string>
    <string name="error_code_expired">Verification code has expired. Please request a new one</string>
    <string name="error_invalid_code">Invalid verification code</string>
    <string name="error_too_many_requests">Too many requests. Please try again later</string>
    <string name="back_button">Back Button</string>
    <string name="reset_button">Reset Button</string>
    <string name="user_instructions">Point your phone at a surface to place the model</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="no_addresses_saved_yet">No addresses saved yet</string>
    <string name="add_new_address">Add New Address</string>
    <string name="shipping_address_add_instruction">Add your first shipping address to get started</string>
    <string name="location_image">Location image</string>
    <string name="shopping_cart_icon">Shopping cart icon</string>
    <string name="add_item_instruction">Add items to start shopping</string>
    <string name="empty_cart_message">Your cart is empty</string>
    <string name="no_products_found_message">No Products Found</string>
    <string name="no_products_in_category_message">We don\'t have any products in this category yet</string>
    <string name="current_orders">Current orders</string>
    <string name="change_password_message">Change Password</string>
    <string name="enter_current_password_instruction">Enter current Password</string>
    <string name="enter_new_password_message">Enter new password</string>
    <string name="confirm_new_password_instruction">Confirm New Password</string>
    <string name="checkout_message">Checkout</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change_message">Change</string>
    <string name="home">Home</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="proceed_to_payment_message">Proceed to Payment</string>
    <string name="support_ideality_com_link">support@ideality.com</string>
    <string name="send_message_message">Send us a message</string>
    <string name="email_us_message">Email Us</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send_message_instruction">Send Message</string>
    <string name="common_questions">Common Questions</string>
    <string name="check_our_faq_section_for_quick_answers_message">Check our FAQ section for quick answers</string>
    <string name="contact_us_message">Contact Us</string>
    <string name="enter_new_email_address_instruction">Enter new email address</string>
    <string name="new_email_message">New Email</string>
    <string name="current_email_message">Current Email</string>
    <string name="change_email_message">Change Email</string>
    <string name="new_email_address_verification_message">You\'ll need to verify your new email address. We\'ll send you a verification link.</string>
    <string name="continue_string">Continue</string>
    <string name="current_phone_number_message">Current Phone Number</string>
    <string name="new_phone_number_message">New Phone Number</string>
    <string name="enter_new_phone_number_instruction">Enter new phone number</string>
    <string name="verify_new_phone_number_message">We\'ll send a verification code to your new phone number.</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="change_profile_photo_label">Change Profile Photo</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="edit_label">Edit</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="save_label">Save</string>
    <string name="password_label">Password</string>
    <string name="remember_me_label">Remember me</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="sign_in_with_email_label">Sign in with Email</string>
    <string name="login_icon">Login icon</string>
    <string name="welcome_back_message">Welcome Back!</string>
    <string name="user_sign_in_instruction">Please Sign in to continue.</string>
    <string name="password_reset_message">Don\'t worry! Please enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="send_reset_link_message">Send Reset Link</string>
    <string name="sent_reset_link_message">We have sent a password reset link to your email address</string>
    <string name="forgot_password_icon">Forgot password icon</string>
    <string name="product_image">Product image</string>
    <string name="no_results_found_message">No results found</string>
    <string name="no_results_found_icon">No results found icon</string>
    <string name="try_different_keywords_or_browse_all_message">Try different keywords or browse all FAQs</string>
    <string name="contact_support_message">Can\'t find what you\'re looking for? Contact Support</string>
    <string name="popular_categories_label">Popular Categories</string>
    <string name="search_faqs_label">Search FAQs</string>
    <string name="faq_label">FAQ</string>
    <string name="clear_search_button">Clear search button</string>
    <string name="loading">Loading...</string>
    <string name="phone_number_updated_message">Phone Number Updated!</string>
    <string name="phone_number_verification_success_message">Your phone number has been successfully verified and updated. You can now use this number for account verification and security purposes.</string>
    <string name="email_verified_message">Email Verified!</string>
    <string name="email_verification_success_message">Your account has been successfully verified. You can now access all features.</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="introduction_label">Introduction</string>
    <string name="information_we_collect_label">Information We Collect</string>
    <string name="information_use_label">How We Use Your Information</string>
    <string name="data_security_label">Data Security</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="create_account_label">Create Account</string>
    <string name="already_have_an_account_message">Already have an account?</string>
    <string name="sign_in_message">Sign in</string>
    <string name="sign_up_image">Sign up image\n</string>
    <string name="get_started_instruction">Get Started</string>
    <string name="create_account_instruction">by Creating a free account</string>
    <string name="settings_label">Settings</string>
    <string name="app_settings_label">App Settings</string>
    <string name="notifications_label">Notifications</string>
    <string name="account_settings_label">Account Settings</string>
    <string name="password_icon">Password icon</string>
    <string name="right_arrow_icon">Right arrow icon</string>
    <string name="about_label">About</string>
    <string name="info_icon">Info icon</string>
    <string name="account_label">Account</string>
    <string name="loading_model">Loading model...</string>
</resources>
